Fix filters on mobile

--- a/app/assets/sass/style.scss
+++ b/app/assets/sass/style.scss
@@ -1413,8 +1413,9 @@ button.tab span {
  ul {
   display: block;
   li {
-      margin: 0 0.5em;
-   &:last-child {margin-right: 0.5em;}
+   width: 43%;
+   margin: 0 0.25em 0.25em 0.25em !important;
+   &:last-child {margin-right: 0.25em !important;}
 
   }
   }
